--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,13 +16,12 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Docker Login
- 
       uses: docker/login-action@v2.0.0
       with:
         username: fizetesipont
-        password: ${{secrets.dockerpw}}
+        password: ${{secrets.DOCKERPW}}
  
     - name: Build the Docker image
       run: 
-          docker build ./samplewebapp --file samplewebapp/Dockerfile --tag SzekelyLegio/samplewebapp:latest
-          docker push SzekelyLegio/samplewebapp:latest
+          docker build ./samplewebapp --file samplewebapp/Dockerfile --tag samplewebapp:latest
+          docker push samplewebapp:latest
