--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-  
+
     runs-on: ubuntu-latest
 
     steps:
@@ -17,8 +17,8 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v2.0.0
       with:
-        username: fizetesipont
-        password: ${{ secrets.DOCKERPW }}
+        username: szekelylegio
+        password: ${{ secrets.dockerpw }}
  
     - name: Build the Docker image
       run: 
