--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,10 +17,10 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v2.0.0
       with:
-        username: szekelylegio
+        username: SzekelyLegio
         password: ${{ secrets.dockerpw }}
  
     - name: Build the Docker image
       run: 
-        docker build ./samplewebapp --file samplewebapp/Dockerfile --tag szekelylegio/samplewebapp:latest
-        docker push szekelylegio/samplewebapp:latest
+        docker build ./samplewebapp --file samplewebapp/Dockerfile --tag SzekelyLegio/samplewebapp:latest
+        docker push SzekelyLegio/samplewebapp:latest
