--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       uses: docker/login-action@v2.0.0
       with:
         username: SzekelyLegio
-        password: ${{ secrests.dockerpw }}
+        password: ${{ secrets.dockerpw }}
  
     - name: Build the Docker image
       run: 
