--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v2.0.0
       with:
-        username: SzekelyLegio
+        username: suhf96
         password: ${{ secrets.dockerpw }}
  
     - name: Build the Docker image
